--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,58 +25,66 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
-      - name: Checkout Repository
+      # -------------------------------------
+      # Checkout
+      # -------------------------------------
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # --------------------------------------
-      # Install Ada Compiler (GNAT)
-      # Ubuntu = OK / others = skip
-      # --------------------------------------
-      - name: Install GNAT (Ubuntu only)
+      # -------------------------------------
+      # Install GNAT (Ubuntu only)
+      # -------------------------------------
+      - name: Install GNAT (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt update
           sudo apt install -y gnat
 
-      # --------------------------------------
-      # Build
-      # --------------------------------------
-      - name: Build Ada project
-        run: |
-          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-            echo "Compiling Ada sources..."
-            gnat make src/main.adb -D src -o cobol_ada
-          else
-            echo "Skipping build on non-Ubuntu (GNAT unavailable)"
-          fi
+      - name: Skip GNAT install on non-Ubuntu
+        if: matrix.os != 'ubuntu-latest'
+        run: echo "GNAT unavailable on ${{ matrix.os }} (skipping)"
 
-      # --------------------------------------
-      # Run example.coba
-      # --------------------------------------
-      - name: Run example on Ubuntu only
+      # -------------------------------------
+      # Build Ada project
+      # -------------------------------------
+      - name: Build (Ubuntu only)
+        if: matrix.os == 'ubuntu-latest'
         run: |
-          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-            echo "Running Cobol-like-Ada example..."
-            ./cobol_ada > out-run.txt
-          else
-            echo "Skipping run"
-            echo "[Skipped] Non-Ubuntu" > out-run.txt
-          fi
+          echo "Compiling Cobol-like-Ada..."
+          gnat make src/main.adb -D src -o cobol_ada
 
-      # --------------------------------------
-      # Generate ProofLedger
-      # --------------------------------------
+      - name: Skip build (non-Ubuntu)
+        if: matrix.os != 'ubuntu-latest'
+        run: echo "Skipping build on ${{ matrix.os }}"
+
+      # -------------------------------------
+      # Run example
+      # -------------------------------------
+      - name: Run example (Ubuntu only)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          echo "Running example.coba..."
+          ./cobol_ada > out-run.txt
+
+      - name: Skip run (non-Ubuntu)
+        if: matrix.os != 'ubuntu-latest'
+        run: echo "[Skipped] Non-Ubuntu runner" > out-run.txt
+
+      # -------------------------------------
+      # ProofLedger
+      # -------------------------------------
       - name: Generate ProofLedger
         run: |
           echo "Repository: Cobol-like-Ada" >  proofledger-${{ matrix.os }}-${{ github.sha }}.txt
           echo "Commit: ${{ github.sha }}" >> proofledger-${{ matrix.os }}-${{ github.sha }}.txt
           echo "OS: ${{ matrix.os }}" >> proofledger-${{ matrix.os }}-${{ github.sha }}.txt
-          echo "Build Time: $(date)" >> proofledger-${{ matrix.os }}-${{ github.sha }}.txt
-          echo "Run Output: out-run.txt" >> proofledger-${{ matrix.os }}-${{ github.sha }}.txt
+          echo "Build time: $(date)" >> proofledger-${{ matrix.os }}-${{ github.sha }}.txt
+          echo "Runner: ${{ matrix.os }}" >> proofledger-${{ matrix.os }}-${{ github.sha }}.txt
+          echo "Output file: out-run.txt" >> proofledger-${{ matrix.os }}-${{ github.sha }}.txt
 
-      # --------------------------------------
-      # Upload artifacts
-      # --------------------------------------
+      # -------------------------------------
+      # Artifacts
+      # -------------------------------------
       - name: Upload run result
         uses: actions/upload-artifact@v4
         with:
@@ -98,10 +106,9 @@ jobs:
             cobol_ada.exe
         continue-on-error: true
 
-
-  # --------------------------------------
-  # Auto Release only when src changes
-  # --------------------------------------
+  # ---------------------------------------------------
+  # Release job — only if src/ changed
+  # ---------------------------------------------------
   release:
     name: "Publish Release"
     needs: build
@@ -111,7 +118,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Download Artifacts
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           path: release_assets/
@@ -120,16 +127,15 @@ jobs:
         id: tag
         run: echo "TAG=v_${{ github.run_number }}" >> $GITHUB_ENV
 
-      - name: Create GitHub Release
+      - name: Publish GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ env.TAG }}
           name: "Cobol-like-Ada Release ${{ env.TAG }}"
           body: |
             🚀 **Cobol-like-Ada 자동 릴리즈 — ${{ env.TAG }}**
-            - Ubuntu 빌드 성공
+            - Ubuntu에서 GNAT로 빌드 성공
+            - example.coba 실행 포함
             - ProofLedger 포함
-            - out-run 결과 포함
-            - 실행파일(리눅스) 포함
             - macOS/Windows는 GNAT 미지원 → BUILD SKIPPED
           files: release_assets/**/*
